syntax = "proto3";

package stream;

option go_package = ".;proto";

service StreamService {
  // 客户端流：上传多个数据，返回处理结果
  rpc ClientStreamUpload (stream UploadRequest) returns (UploadResponse);

  // 服务端流：客户端发送请求，服务器持续返回数据
  rpc ServerStreamDownload (DownloadRequest) returns (stream DownloadResponse);

  // 双向流：双向实时通信
  rpc BidirectionalChat (stream ChatMessage) returns (stream ChatMessage);
}

message UploadRequest {
  string data = 1;
}

message UploadResponse {
  string status = 1;
}

message DownloadRequest {
  int32 count = 1;
}

message DownloadResponse {
  string data = 1;
}

message ChatMessage {
  string user = 1;
  string message = 2;
}